--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
     <h2>Places I've been I want to share</h2>  
   </header> 
   <nav>
-     <div>
-         <ul>
-             <li><a href="#">Home</a></li>
+     <div class="nav-left">
+         <ul class="page-links">
+             <li><a class="active" href="#">Home</a></li>
              <li><a href="#recent-blogs">Recent Blogs</a></li>
              <li><a href="#news-about">About</a></li>
          </ul>
-     </div><div>
-         <ul>
+     </div>
+     <div class="nav-right">
+         <ul class="social-links">
              <li><a href="https://www.twitter.com" target="_blank">Twitter</a></li>
              <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
              <li><a href="https://www.github.com" target="_blank">GitHub</a></li>
